# getgist

./: .gitignore  .landscape.yml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  getgist.py  pyproject.toml  pytest.ini  setup.py  tests.py  tox.ini
getgist/: __init__.py  __main__.py  getgist.py  github.py  local.py  request.py  requests.py
tests/: __init__.py  config.py  conftest.py  gists.sample.json  mocks.py  test_cli.py  test_github_tools.py  test_init.py  test_integration.py  test_local_tools.py  test_requests.py  test_units.py
tests/fixtures/: gist_id_gist_1.fail.json  gist_id_gist_1.success.json  gists.success.json  gists_page0.success.json  gists_page1.success.json  user.success.json  users_janedoe_gists.success.json  users_janedoe_gists_page1.success.json  users_janedoe_gists_page2.success.json
