[tool.poetry]
name = "getgist"
version = "0.2.2"
description = "CLI to update local and remote files from GitHub Gists."
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/cuducos/getgist"
keywords = ["gist", "cli", "github"]
packages = [{ include = "getgist"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
getgist= "getgist.__main__:run_getgist"
getmy= "getgist.__main__:run_getmy"
putgist= "getgist.__main__:run_putgist"
putmy= "getgist.__main__:run_putmy"
lsgists= "getgist.__main__:run_lsgists"

[tool.poetry.dependencies]
python = "^3.6"
click = ">=6.6"
requests = ">=2.18.1"
tabulate = ">=0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-black = "^0.3.12"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"
pytest-mock = "^3.3.1"
tox = "^3.20.1"

[tool.pytest.ini_options]
flake8-ignore = ["E501" , "W503"]
addopts = "--black --flake8 --cov getgist --no-cov-on-fail --cov-fail-under=74"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39, py38, py37, py36

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest
setenv =
    COVERAGE_FILE = .coverage.{envname}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
